<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_favourite"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/ic_recents"
        android:title="@string/title_album"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_friends"
        android:title="@string/title_home"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_nearby"
        android:title="@string/title_notification"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_restaurants"
        android:title="@string/title_setting"
        app:showAsAction="always"
        />

</menu>